clang-format: add lib/grn_util.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -126,6 +126,7 @@ repos:
           ?lib/grn_token_cursor\.h|
           ?lib/grn_tokenizer\.h|
           ?lib/grn_tokenizers\.h|
+          ?lib/grn_util\.h|
           ?lib/grn_vector\.h|
           ?lib/h3\.c|
           ?lib/highlighter\.c|
