memory-map: add a new mmap() abstraction layer
I wanted to reuse the existing mmap() abstraction layer in `lib/io.c`
but it was difficult to extract...

This is still a naive implementation. The Windows part isn't tested,
offset isn't forced to align with page size and so on... We'll improve
them later.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,6 +43,7 @@ repos:
           ?include/groonga/ii\.h|
           ?include/groonga/index_column\.h|
           ?include/groonga/language_model\.h|
+          ?include/groonga/memory_map\.h|
           ?include/groonga/obj\.h|
           ?include/groonga/operator\.h|
           ?include/groonga/output\.h|
@@ -135,6 +136,7 @@ repos:
           ?lib/index_column\.c|
           ?lib/language_model\.cpp|
           ?lib/load\.c|
+          ?lib/memory_map\.c|
           ?lib/mrb/mrb_bulk\.c|
           ?lib/mrb/mrb_bulk\.h|
           ?lib/mrb/mrb_ctx\.c|
