language-model: don't use ggml_backend_load_all_from_path() with system llama.cpp
We use it for bundled llama.cpp. We install ggml backends in custom
location for bundled llama.cpp.

--- a/config.h.cmake.in
+++ b/config.h.cmake.in
@@ -100,6 +100,7 @@
 #cmakedefine GRN_WITH_KYTEA
 #cmakedefine GRN_WITH_LIBEDIT
 #cmakedefine GRN_WITH_LLAMA_CPP
+#cmakedefine GRN_WITH_LLAMA_CPP_BUNDLED
 #cmakedefine GRN_WITH_LZ4
 #cmakedefine GRN_WITH_MECAB
 #cmakedefine GRN_WITH_MESSAGE_PACK
