--- a/packages/yum/almalinux-9/Dockerfile
+++ b/packages/yum/almalinux-9/Dockerfile
@@ -20,11 +20,13 @@ RUN \
   dnf install -y ${quiet} \
     ${SCL} \
     arrow-compute-devel-${APACHE_ARROW_VERSION} \
+    blas-devel \
     ccache \
     cmake \
     curl-devel \
     intltool \
     mecab-devel \
+    lapack-devel \
     libedit-devel \
     libevent-devel \
     libstemmer-devel \
