--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -186,6 +186,7 @@ repos:
           ?plugins/functions/number\.cpp|
           ?plugins/tokenizers/h3_index\.c|
           ?plugins/tokenizers/mecab\.c|
+          ?plugins/language_model/knn\.cpp|
           ?src/groonga\.c|
           )
   - repo: https://github.com/cheshirekow/cmake-format-precommit
