--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1924,7 +1924,9 @@ if(NOT "${GRN_WITH_FAISS}" STREQUAL "no")
   if("${GRN_WITH_FAISS}" STREQUAL "bundled")
     set(faiss_FOUND FALSE)
   else()
-    # 1.12.0 or later is required
+    if(UNIX AND NOT APPLE)
+      find_package(OpenMP)
+    endif()
     if("${GRN_WITH_FAISS}" STREQUAL "system")
       find_package(faiss REQUIRED)
     else()
@@ -1932,9 +1934,6 @@ if(NOT "${GRN_WITH_FAISS}" STREQUAL "no")
     endif()
   endif()
   if(faiss_FOUND)
-    if(UNIQ AND NOT APPLE)
-      find_package(OpenMP REQUIRED)
-    endif()
     set(GRN_WITH_FAISS TRUE)
     message(STATUS "faiss: system")
   elseif(NOT FETCHCONTENT_FULLY_DISCONNECTED)
