--- a/packages/apt/debian-bookworm/Dockerfile
+++ b/packages/apt/debian-bookworm/Dockerfile
@@ -29,11 +29,10 @@ RUN \
     devscripts \
     libarrow-compute-dev \
     libarrow-dev \
-    libblas-dev \
     libcurl4-openssl-dev \
     libedit-dev \
     libevent-dev \
-    liblapack-dev \
+    libfaiss-dev \
     liblz4-dev \
     libmecab-dev \
     libmsgpack-dev \
