--- a/packages/apt/ubuntu-jammy/Dockerfile
+++ b/packages/apt/ubuntu-jammy/Dockerfile
@@ -28,11 +28,10 @@ RUN \
     dh-apparmor \
     libarrow-compute-dev \
     libarrow-dev \
-    libblas-dev \
     libcurl4-openssl-dev \
     libedit-dev \
     libevent-dev \
-    liblapack-dev \
+    libfaiss-dev \
     liblz4-dev \
     libmecab-dev \
     libmsgpack-dev \
