--- a/packages/debian/rules
+++ b/packages/debian/rules
@@ -43,5 +43,6 @@ override_dh_auto_install:
 	install -d debian/tmp/etc/munin/plugin-conf.d/
 	install -m 0644 debian/groonga-munin-plugins.conf \
 	  debian/tmp/etc/munin/plugin-conf.d/groonga
+	install -d debian/tmp/usr/share/groonga/faiss/
 	mv debian/tmp/usr/share/doc/groonga/ \
 	  debian/tmp/usr/share/doc/groonga-doc/
