clang-format: add accessor.h

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
         files: >-
           (
           ?benchmark/bench-distance\.c|
+          ?include/groonga/accessor\.h|
           ?include/groonga/applier\.h|
           ?include/groonga/bulk\.hpp|
           ?include/groonga/cache\.h|
