--- a/packages/debian/control
+++ b/packages/debian/control
@@ -161,7 +161,7 @@ Description: Language model related plugin for Groonga
  Groonga is an open-source fulltext search engine and column store.
  It lets you write high-performance applications that requires fulltext search.
  .
- This package provides TokenLanguageModel and language_model_knn() by
+ This package provides TokenLanguageModelKNN and language_model_knn() by
  language_model/knn.
  .
  This package provides langauge_model_vectorize() by functions/language_model.
