cmake: fix bundled base64 source archive path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1956,7 +1956,7 @@ if(NOT "${GRN_WITH_FAISS}" STREQUAL "no")
         set(GRN_FAISS_SOURCE_LOCAL_PATH
             "${CMAKE_CURRENT_SOURCE_DIR}/vendor/${GRN_FAISS_SOURCE_BASE_NAME}")
         set(GRN_FAISS_FETCH_CONTENT_SOURCE)
-        if(EXISTS ${FAISS_SOURCE_LOCAL_PATH})
+        if(EXISTS ${GRN_FAISS_SOURCE_LOCAL_PATH})
           list(APPEND GRN_FAISS_FETCH_CONTENT_SOURCE URL
                ${GRN_FAISS_SOURCE_LOCAL_PATH} URL_HASH
                "SHA256=${GRN_FAISS_BUNDLED_SHA256}")
@@ -2066,8 +2066,7 @@ if(NOT "${GRN_WITH_BASE64}" STREQUAL "no")
 
     # We need to use function to create a variable scope
     function(grn_build_base64)
-      set(BASE64_SOURCE_BASE_NAME
-          "base64-${GRN_USEARCH_BUNDLED_VERSION}.tar.gz")
+      set(BASE64_SOURCE_BASE_NAME "base64-${GRN_BASE64_BUNDLED_VERSION}.tar.gz")
       set(BASE64_SOURCE_LOCAL_PATH
           "${CMAKE_CURRENT_SOURCE_DIR}/vendor/${BASE64_SOURCE_BASE_NAME}")
       if(EXISTS ${BASE64_SOURCE_LOCAL_PATH})
