--- a/lib/c_sources.am
+++ b/lib/c_sources.am
@@ -76,6 +76,7 @@ libgroonga_c_sources =				\
 	grn_posting.h				\
 	grn_proc.h				\
 	grn_progress.h				\
+	grn_progress_logger.h			\
 	grn_report.h				\
 	grn_request_canceler.h			\
 	grn_request_timer.h			\
@@ -146,6 +147,7 @@ libgroonga_c_sources =				\
 	posting.c				\
 	proc.c					\
 	progress.c				\
+	progress_logger.c			\
 	raw_string.c				\
 	report.c				\
 	request_canceler.c			\
