package: update version info to 15.1.9 (2025-11-05)

--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -503,6 +503,9 @@ exit 0
 %endif
 
 %changelog
+* Wed Nov 05 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.9-1
+- New upstream release.
+
 * Fri Oct 31 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.8-1
 - New upstream release.
 
