packages ubuntu: add missing require packages for enabling Faiss
Because if Faiss is disable, the installing of groonga-plugin-language-model is failure as below.

```
dh_install: warning: Cannot find (any matches for) "usr/lib/*/groonga/plugins/language_model/" (tried in ., debian/tmp)

dh_install: warning: groonga-plugin-language-model missing files: usr/lib/*/groonga/plugins/language_model/
dh_install: error: missing files, aborting
make: *** [debian/rules:15: binary] Error 255
```

--- a/packages/apt/ubuntu-jammy/Dockerfile
+++ b/packages/apt/ubuntu-jammy/Dockerfile
@@ -28,10 +28,11 @@ RUN \
     dh-apparmor \
     libarrow-compute-dev \
     libarrow-dev \
+    libblas-dev \
     libcurl4-openssl-dev \
     libedit-dev \
     libevent-dev \
-    libfaiss-dev \
+    liblapack-dev \
     liblz4-dev \
     libmecab-dev \
     libmsgpack-dev \
