--- a/packages/yum/groonga.spec.in
+++ b/packages/yum/groonga.spec.in
@@ -503,6 +503,9 @@ exit 0
 %endif
 
 %changelog
+* Mon Nov 10 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.2.0-1
+- New upstream release.
+
 * Wed Nov 05 2025 Horimoto Yasuhiro <horimoto@clear-code.com> - 15.1.9-1
 - New upstream release.
 
